assets/css/style.css
/*import for Oswald google font*/
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
/*import for Lato Light 300 fonts*/
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&family=Oswald:wght@200..700&display=swap');

/* asterix wildcard selector to overide default browser styles*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/*General Styles*/
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /*Generic project styles*/
    color: #3a3a3a;
    font-family: "Lato", sans-serif;
    font-weight: 300;
    font-style: normal;
}

/*Header*/
header {
    background-color: #FFFFFF;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;
}

h1 {
    font-family: "Oswald", sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #252525;
}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

/*Navbar styles with dropdown*/

nav {
    position: absolute;
    background-color: #FFFFFF;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    /*top is assigned so the nav does not obscure the heading when toggled on*/
    top:100%;
}

/*Nav toggle*/
#nav-toggle:checked~nav {
    display:block;
}

#nav-toggle {
    display:none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/*Main Content*/
main {
    background-color: lightblue;
    /*Makes the main element take up any surplus space on the page*/
    flex: 1 0 auto;
}

/*Footer*/
footer {
    background-color: orange;
}

